@@ -31,6 +31,8 @@
 
   .. autofunction:: cleanUp
 
+  .. autofunction:: zcml_configure
+
   .. autoclass:: DummyModel
      :members:
 
